--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 </p>
 
 <h3>Cizí jazyky</h3>
-
-brazilská portugalština
-angličtina
-němčina
+<ul>
+    <li>brazilská portugalština</li>
+    <li>angličtina</li>
+    <li>němčina</li>
+</ul>
 
 <h2>Zájmy</h2>
 <p>Ve volném čase mě baví cestovat a poznávat nové země a kultury. Toho jsem se nevzdala ani s narozením prvního dítěte. 
