--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     
 </head>
 <body>
-  
+ 
+<!--Hlavicka stranky-->
     <h1>ŽIVOTOPIS</h1>
+
+<!--Sekce Osobni udaje-->
 
 <h2>Osobní údaje</h2>
 <p>
@@ -18,37 +21,38 @@
     Telefon: +420 789 123 456
 </p>
 
-
+<!--Sekce Pracovni zkusenosti-->
 <h2>Pracovní zkušenosti</h2>
 
 <p>
     Název společnosti: Panalpina Business Services s.r.o.<br>
     Pozice: Process Expert - Document Processing<br>
-    Data pro zaměstnání: únor 2015 – říjen 2018<br>
+    Období: únor 2015 – říjen 2018<br>
     Lokalita: Praha, Česká republika
 </p>
 
 <p>
     Název společnosti: Jazyková agentura Horizonty, s.r.o.<br>
     Pozice: Lektorka anglického a německého jazyka<br>
-    Data pro zaměstnání: únor 2013 – březen 2014<br>
+    Období: únor 2013 – březen 2014<br>
     Lokalita: České Budějovice, Česká republika
 </p>
 
 <p>
     Název společnosti: OPEN AGENCY s.r.o.<br>
     Pozice: Lektorka německého jazyka (pilotní kurzy pro modul "Služby v cestovním ruchu"<br>  
-    Data pro zaměstnání: září 2013 – prosinec 2013<br>
+    Období: září 2013 – prosinec 2013<br>
     Lokalita: České Budějovice, Česká republika
 </p>
 
 <p>
     Název společnosti: E.ON Energie<br>
     Pozice: administrativní výpomoc na oddělení IT Podpora<br>
-    Data pro zaměstnání: březen 2010 – listopad 2013<br>
+    Období: březen 2010 – listopad 2013<br>
     Lokalita: České Budějovice, Česká republika
 </p>
 
+<!--Sekce Vzdelani-->
 <h2>Vzdělání</h2>
 
 <p>
@@ -59,7 +63,7 @@
 </p>
 
 <p>
-    Universität Augsburg<br>
+    Universität Augsburg (Německo)<br>
     Fakulta: Filozofická<br>
     Obor studia: Germanistika (studium v rámci programu Erasmus)<br>
     Období studia: 2014
@@ -74,6 +78,7 @@
  
 <h2>Další vzdělání a certifikace</h2>
 
+<!--Sekce Dalsi vzdelani-->
 <h3>Certifikáty</h3>
 <p>
     Cambridge English Language Assessment<br>
@@ -96,12 +101,13 @@
     <li>němčina</li>
 </ul>
 
+<!--Sekce Zajmy-->
 <h2>Zájmy</h2>
 <p>Ve volném čase mě baví cestovat a poznávat nové země a kultury. Toho jsem se nevzdala ani s narozením prvního dítěte. 
 V souvislosti s rodičovstvím mě zajímá vývojová psychologie dítěte, přístupy k výchově, ale také téma porodu. Ráda čtu také beletrii.</p>
 
-
-
+<!--Paticka-->
+<p>2021, Andrea de Oliveira</p>
 
 
 
