--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zivotopis AdeO</title>
     
 </head>
 <body>
@@ -17,8 +17,9 @@
 <p>
     Jméno: Andrea de Oliveira<br>
     Adresa: Vzorová 5, 85 123 Nesmyslov<br>
-    E-mail: andrea.de@gmail.com<br>
-    Telefon: +420 789 123 456
+    E-mail: <a href="mailto:andrea.de@gmail.com">andrea.de@gmail.com</a><br>
+    Telefon: +420 789 123 456<br>
+    LinkedIn: <a href="https://cz.linkedin.com/in/andrea-de-oliveira-6b0a5bb8" target="_blank">Andrea de Oliveira</a>
 </p>
 
 <!--Sekce Pracovni zkusenosti-->
