--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <!--Sekce Osobni udaje-->
 
 <h2>Osobní údaje</h2>
+
+<img src="foto_zivotopis1.jpg" alt="foto Andrey">
+
 <p>
     Jméno: Andrea de Oliveira<br>
     Adresa: Vzorová 5, 85 123 Nesmyslov<br>
