--- a/index.html
+++ b/index.html
@@ -10,109 +10,124 @@
 <body>
  
     <!--Hlavicka stranky-->
-    <h1>ŽIVOTOPIS</h1>
-
+    <header>
+        <h1>ŽIVOTOPIS</h1>
+    </header>
     <!--Sekce Osobni udaje-->
 
-    <h2>Osobní údaje</h2>
+    <section>
+        <h2>Osobní údaje</h2>
 
-    <img src="foto_zivotopis1.jpg" alt="foto Andrey">
+        <img src="foto_zivotopis1.jpg" alt="foto Andrey">
 
-    <p>
-        Jméno: Andrea de Oliveira<br>
-        Adresa: Vzorová 5, 85 123 Nesmyslov<br>
-        E-mail: <a href="mailto:andrea.de@gmail.com">andrea.de@gmail.com</a><br>
-        Telefon: +420 789 123 456<br>
-        LinkedIn: <a href="https://cz.linkedin.com/in/andrea-de-oliveira-6b0a5bb8" target="_blank">Andrea de Oliveira</a>
-    </p>
+        <p>
+            Jméno: Andrea de Oliveira<br>
+            Adresa: Vzorová 5, 85 123 Nesmyslov<br>
+            E-mail: <a href="mailto:andrea.de@gmail.com">andrea.de@gmail.com</a><br>
+            Telefon: +420 789 123 456<br>
+            LinkedIn: <a href="https://cz.linkedin.com/in/andrea-de-oliveira-6b0a5bb8" target="_blank">Andrea de Oliveira</a>
+        </p>
+    </section>
 
     <!--Sekce Pracovni zkusenosti-->
-    <h2>Pracovní zkušenosti</h2>
+    <section>
+        <h2>Pracovní zkušenosti</h2>
 
-    <p>
-        Název společnosti: Panalpina Business Services s.r.o.<br>
-        Pozice: Process Expert - Document Processing<br>
-        Období: únor 2015 – říjen 2018<br>
-        Lokalita: Praha, Česká republika
-    </p>
+        <p>
+            Název společnosti: Panalpina Business Services s.r.o.<br>
+            Pozice: Process Expert - Document Processing<br>
+            Období: únor 2015 – říjen 2018<br>
+            Lokalita: Praha, Česká republika
+        </p>
 
-    <p>
-        Název společnosti: Jazyková agentura Horizonty, s.r.o.<br>
-        Pozice: Lektorka anglického a německého jazyka<br>
-        Období: únor 2013 – březen 2014<br>
-        Lokalita: České Budějovice, Česká republika
-    </p>
+        <p>
+            Název společnosti: Jazyková agentura Horizonty, s.r.o.<br>
+            Pozice: Lektorka anglického a německého jazyka<br>
+            Období: únor 2013 – březen 2014<br>
+            Lokalita: České Budějovice, Česká republika
+        </p>
 
-    <p>
-        Název společnosti: OPEN AGENCY s.r.o.<br>
-        Pozice: Lektorka německého jazyka (pilotní kurzy pro modul "Služby v cestovním ruchu"<br>  
-        Období: září 2013 – prosinec 2013<br>
-        Lokalita: České Budějovice, Česká republika
-    </p>
+        <p>
+            Název společnosti: OPEN AGENCY s.r.o.<br>
+            Pozice: Lektorka německého jazyka (pilotní kurzy pro modul "Služby v cestovním ruchu"<br>  
+            Období: září 2013 – prosinec 2013<br>
+            Lokalita: České Budějovice, Česká republika
+        </p>
 
-    <p>
-        Název společnosti: E.ON Energie<br>
-        Pozice: administrativní výpomoc na oddělení IT Podpora<br>
-        Období: březen 2010 – listopad 2013<br>
-        Lokalita: České Budějovice, Česká republika
-    </p>
+        <p>
+            Název společnosti: E.ON Energie<br>
+            Pozice: administrativní výpomoc na oddělení IT Podpora<br>
+            Období: březen 2010 – listopad 2013<br>
+            Lokalita: České Budějovice, Česká republika
+        </p>
+    </section>
 
     <!--Sekce Vzdelani-->
-    <h2>Vzdělání</h2>
+    <section>
+        <h2>Vzdělání</h2>
 
-    <p>
-        Jihočeská univerzita v Českých Budějovicích<br>
-        Fakulta: Pedagogická<br>
-        Obor studia: Anglický jazyk a německý jazyk pro 2. stupeň ZŠ (Mgr.)<br>
-        Období studia: 2012 – 2015
-    </p>
+        <p>
+            Jihočeská univerzita v Českých Budějovicích<br>
+            Fakulta: Pedagogická<br>
+            Obor studia: Anglický jazyk a německý jazyk pro 2. stupeň ZŠ (Mgr.)<br>
+            Období studia: 2012 – 2015
+        </p>
 
-    <p>
-        Universität Augsburg (Německo)<br>
-        Fakulta: Filozofická<br>
-        Obor studia: Germanistika (studium v rámci programu Erasmus)<br>
-        Období studia: 2014
-    </p>
+        <p>
+            Universität Augsburg (Německo)<br>
+            Fakulta: Filozofická<br>
+            Obor studia: Germanistika (studium v rámci programu Erasmus)<br>
+            Období studia: 2014
+        </p>
 
-    <p>
-        Jihočeská univerzita v Českých Budějovicích<br>
-        Fakulta: Pedagogická<br>
-        Obor studia: Anglický jazyk a německý jazyk se zaměřením na vzdělávání<br>
-        Období studia: 2009 – 2012
-    </p> 
- 
-    <h2>Další vzdělání a certifikace</h2>
+        <p>
+            Jihočeská univerzita v Českých Budějovicích<br>
+            Fakulta: Pedagogická<br>
+            Obor studia: Anglický jazyk a německý jazyk se zaměřením na vzdělávání<br>
+            Období studia: 2009 – 2012
+        </p> 
+    </section>
+
 
     <!--Sekce Dalsi vzdelani-->
-    <h3>Certifikáty</h3>
-    <p>
-        Cambridge English Language Assessment<br>
-        First Certificate in English<br>
-        Vydavatel: Cambridge English Language Assessment<br>
-        Vydáno: 2008
-    </p>
+    <section>
+        <h2>Další vzdělání a certifikace</h2>
 
-    <p>
-        Goethe Institut<br>
-        Deutsches Sprachdiplom<br>
-        Vydavatel: Goethe Institut<br>
-        Vydáno: 2008
-    </p>
+        <h3>Certifikáty</h3>
+        <p>
+            Cambridge English Language Assessment<br>
+            First Certificate in English<br>
+            Vydavatel: Cambridge English Language Assessment<br>
+            Vydáno: 2008
+        </p>
 
-    <h3>Cizí jazyky</h3>
-    <ul>
-        <li>brazilská portugalština</li>
-        <li>angličtina</li>
-        <li>němčina</li>
-    </ul>
+        <p>
+            Goethe Institut<br>
+            Deutsches Sprachdiplom<br>
+            Vydavatel: Goethe Institut<br>
+            Vydáno: 2008
+        </p>
+
+        <h3>Cizí jazyky</h3>
+        <ul>
+            <li>brazilská portugalština</li>
+            <li>angličtina</li>
+            <li>němčina</li>
+        </ul>
+    </section>
+
 
     <!--Sekce Zajmy-->
-    <h2>Zájmy</h2>
-    <p>Ve volném čase mě baví cestovat a poznávat nové země a kultury. Toho jsem se nevzdala ani s narozením prvního dítěte. 
-    V souvislosti s rodičovstvím mě zajímá vývojová psychologie dítěte, přístupy k výchově, ale také téma porodu. Ráda čtu také beletrii.</p>
+    <section>
+        <h2>Zájmy</h2>
+        <p>Ve volném čase mě baví cestovat a poznávat nové země a kultury. Toho jsem se nevzdala ani s narozením prvního dítěte. 
+        V souvislosti s rodičovstvím mě zajímá vývojová psychologie dítěte, přístupy k výchově, ale také téma porodu. Ráda čtu také beletrii.</p>
+    </section>
 
     <!--Paticka-->
-    <p>2021, Andrea de Oliveira</p>
+    <footer>
+        <p>2021, Andrea de Oliveira</p>
+    </footer>
 
 
 
