--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
  
     <!--Hlavicka stranky-->
-    <header>
+    <header class="hlavicka">
         <h1>ŽIVOTOPIS</h1>
     </header>
     <!--Sekce Osobni udaje-->
 
-    <section>
+    <section class="osobni_udaje">
         <h2>Osobní údaje</h2>
 
-        <img src="foto_zivotopis1.jpg" alt="foto Andrey">
+        <img class="foto_osobni_udaje" src="foto_zivotopis1.jpg" alt="foto Andrey">
 
         <p>
             Jméno: Andrea de Oliveira<br>
@@ -30,7 +30,7 @@
     </section>
 
     <!--Sekce Pracovni zkusenosti-->
-    <section>
+    <section class="pracovni_zkusenosti">
         <h2>Pracovní zkušenosti</h2>
 
         <p>
@@ -63,7 +63,7 @@
     </section>
 
     <!--Sekce Vzdelani-->
-    <section>
+    <section class="vzdelani">
         <h2>Vzdělání</h2>
 
         <p>
@@ -90,7 +90,7 @@
 
 
     <!--Sekce Dalsi vzdelani-->
-    <section>
+    <section class="dalsi_vzdelani">
         <h2>Další vzdělání a certifikace</h2>
 
         <h3>Certifikáty</h3>
@@ -118,15 +118,15 @@
 
 
     <!--Sekce Zajmy-->
-    <section>
+    <section class="zajmy">
         <h2>Zájmy</h2>
         <p>Ve volném čase mě baví cestovat a poznávat nové země a kultury. Toho jsem se nevzdala ani s narozením prvního dítěte. 
         V souvislosti s rodičovstvím mě zajímá vývojová psychologie dítěte, přístupy k výchově, ale také téma porodu. Ráda čtu také beletrii.</p>
     </section>
 
     <!--Paticka-->
-    <footer>
-        <p>2021, Andrea de Oliveira</p>
+    <footer class="paticka">
+        <p>Andrea de Oliveira, 2021</p>
     </footer>
 
 
