--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
     <header class="hlavicka">
         <h1>ŽIVOTOPIS</h1>
     </header>
-    <!--Sekce Osobni udaje-->
 
-    <section class="osobni_udaje">
+
+    <!--Menu-->
+    <ul class="menu">
+        <li><a href="#osobni_udaje">Osobní údaje</a></li>
+        <li><a href="#pracovni_zkusenosti">Pracovní zkušenosti</a></li>
+        <li><a href="#vzdelani">Vzdělání</a></li>
+        <li><a href="#dalsi_vzdelani">Další vzdělání a certifikace</a></li>
+        <li><a href="#zajmy">Zájmy</a></li>
+    </ul>
+
+
+    <!--Sekce Osobni udaje-->
+    <section class="osobni_udaje" id="osobni_udaje">
         <h2>Osobní údaje</h2>
 
         <img class="foto_osobni_udaje" src="foto_zivotopis1.jpg" alt="foto Andrey">
@@ -30,7 +41,7 @@
     </section>
 
     <!--Sekce Pracovni zkusenosti-->
-    <section class="pracovni_zkusenosti">
+    <section class="pracovni_zkusenosti" id="pracovni_zkusenosti">
         <h2>Pracovní zkušenosti</h2>
 
         <p>
@@ -63,7 +74,7 @@
     </section>
 
     <!--Sekce Vzdelani-->
-    <section class="vzdelani">
+    <section class="vzdelani" id="vzdelani">
         <h2>Vzdělání</h2>
 
         <p>
@@ -90,7 +101,7 @@
 
 
     <!--Sekce Dalsi vzdelani-->
-    <section class="dalsi_vzdelani">
+    <section class="dalsi_vzdelani" id="dalsi_vzdelani">
         <h2>Další vzdělání a certifikace</h2>
 
         <h3>Certifikáty</h3>
@@ -118,7 +129,7 @@
 
 
     <!--Sekce Zajmy-->
-    <section class="zajmy">
+    <section class="zajmy" id="zajmy">
         <h2>Zájmy</h2>
         <p>Ve volném čase mě baví cestovat a poznávat nové země a kultury. Toho jsem se nevzdala ani s narozením prvního dítěte. 
         V souvislosti s rodičovstvím mě zajímá vývojová psychologie dítěte, přístupy k výchově, ale také téma porodu. Ráda čtu také beletrii.</p>
